--- a/todo/src/css/App.css
+++ b/todo/src/css/App.css
@@ -6,9 +6,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  border: 1px solid black;
+  width: 60%;
+  margin: 50px auto;
+  padding: 100px;
+  display: flex;
+  justify-content: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+input {
+  font-size: 20px;
+}
+
+button {
+  height: 30px;
+  width: 30px;
+}
+
+.form {
+  display: flex;
 }
