--- a/todo/src/css/App.css
+++ b/todo/src/css/App.css
@@ -6,12 +6,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  border: 1px solid black;
-  width: 60%;
-  margin: 50px auto;
-  padding: 100px;
-  display: flex;
-  justify-content: center;
 }
 
 code {
@@ -30,6 +24,17 @@ input {
 button {
   height: 30px;
   width: 30px;
+}
+
+.App {
+  border: 1px solid black;
+  width: 60%;
+  margin: 50px auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .form {
