--- a/todo/src/css/App.css
+++ b/todo/src/css/App.css
@@ -28,6 +28,7 @@ button {
 
 .App {
   border: 1px solid black;
+  border-radius: 10px;
   width: 60%;
   margin: 50px auto;
   padding: 20px;
@@ -35,6 +36,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(#c1ebec, #89bff1);
 }
 
 .form {
